--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": false
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "temp/algorithms"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
